--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "inlineSourceMap": true,
+    "noImplicitAny": true,
     "noEmit": true,
     "jsx": "react"
   },
