yarn: switch packagemanager

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,7 +2,7 @@
   "appId": "io.ionic.starter",
   "appName": "WebApp",
   "bundledWebRuntime": false,
-  "npmClient": "npm",
+  "npmClient": "yarn",
   "webDir": "build",
   "cordova": {}
 }
