--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "axe-puppeteer": "^1.0.0",
     "axe-reports": "^1.1.11",
     "cucumber": "5.0.2",
+    "eslint": "^6.8.0",
     "expect": "24.5.0",
     "gh-pages": "^2.2.0",
     "pixelmatch": "^5.0.0",
