lint: eslint on gh-pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         run: yarn install
 
       - name: Run ESLinting
-        run: eslint ./src/**/*.tsx --fix
+        run: ./node_modules/.bin/eslint ./src/**/*.tsx --fix
 
       - name: Run UNIT Tests
         run: yarn test:unitCI
