--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Install Packages
         run: yarn install
 
+      - name: Run Prettier
+        run: ./node_modules/.bin/prettier ./src/**/*.tsx --write
+
       - name: Run ESLinting
         run: ./node_modules/.bin/eslint ./src/**/*.tsx --fix
 
