--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,8 +53,9 @@ jobs:
         run: yarn install
 
       - name: Run Prettier
-        run: ./node_modules/.bin/prettier ./src/**/*.* --write
-        run: ./node_modules/.bin/prettier ./feature/**/*.* --write
+        run: |
+             ./node_modules/.bin/prettier ./src/**/*.* --write
+             ./node_modules/.bin/prettier ./feature/**/*.* --write
 
       - name: Run ESLinting
         run: ./node_modules/.bin/eslint ./src/**/*.tsx --fix
