--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,14 @@
   "singleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": false,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "parser": "typescript",
+  "overrides": [
+    {
+      "files": "*.css",
+      "options": {
+        "parser": "css"
+      }
+    }
+  ]
 }
