lint:prettier all

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,7 @@ jobs:
 
       - name: Run Prettier
         run: |
-          ./node_modules/.bin/prettier ./src/* --write
-          ./node_modules/.bin/prettier ./features/* --write
+          ./node_modules/.bin/prettier . --write
 
       - name: Run ESLinting
         run: |
