--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,18 @@
-lib/
+*.*
+!*.css
+!*.js
+!*.json
+!*.jsx
+!*.less
+!*.md
+!*.mdx
+!*.ts
+!*.tsx
+!*.yml
+
+build/
+coverage/
 node_modules/
+public/
+.vscode/
 package.json
