--- a/.prettierrc
+++ b/.prettierrc
@@ -14,6 +14,12 @@
       "options": {
         "parser": "css"
       }
+    },
+    {
+      "files": "*.json",
+      "options": {
+        "parser": "json"
+      }
     }
   ]
 }
