--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,51 @@
-build/
-coverage/
-node_modules/
+#####################################################
+### File Extension to Lint
+
+*.*
+!*.js
+!*.jsx
+!*.ts
+!*.tsx
+
+#####################################################
+### Folder and Files to ignore
+
 public/
-.vscode/
+package.json
 serviceWorker.ts
+
+
+
+
+
+#####################################################
+### Copy from .gitignore
+
+# testing
+/test/screenshots/compare
+/test/screenshots/diff
+/test/screenshots/error
+/test/reports
+/coverage
+
+# dependencies
+/node_modules
+yarn.lock
+/.pnp
+.pnp.js
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+.vscode
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
