--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Run ESLinting
         run: |
-          ./node_modules/.bin/eslint **/* --fix
+          ./node_modules/.bin/eslint . --fix
 
       - name: Run UNIT Tests
         run: yarn test:unitCI
