--- a/.prettierrc
+++ b/.prettierrc
@@ -20,6 +20,12 @@
       "options": {
         "parser": "json"
       }
+    },
+    {
+      "files": "*.yml",
+      "options": {
+        "parser": "yaml"
+      }
     }
   ]
 }
