--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,12 +53,10 @@ jobs:
         run: yarn install
 
       - name: Run Prettier
-        run: |
-          ./node_modules/.bin/prettier --write /**/*.*   
+        run: ./node_modules/.bin/prettier --write "**/*.*"   
 
       - name: Run ESLinting
-          run: |
-            ./node_modules/.bin/eslint --fix /**/*.*
+          run: ./node_modules/.bin/eslint --fix "**/*.*"
 
       - name: Run UNIT Tests
         run: yarn test:unitCI
