lint: action order

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,16 @@
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [master]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [12.x]
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -52,20 +46,20 @@ jobs:
       - name: Install Packages
         run: yarn install
 
-      - name: Run Prettier
+      - name: Run Linter Prettier
         run: ./node_modules/.bin/prettier --write "**/*.*"   
 
-      - name: Run ESLinting
+      - name: Run Linter ESLint
         run: ./node_modules/.bin/eslint --fix "**/*.*"
 
-      - name: Run UNIT Tests
+      - name: Log Git Status
+        run: git status
+
+      - name: Run Jest UNIT Tests
         run: yarn test:unitCI
 
       - name: Build
         run: yarn build
-
-      - name: Git Status
-        run: git status
 
       - name: Commit and Push Changes
         uses: mikeal/publish-to-github-action@master
