--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,15 +58,13 @@ jobs:
       - name: Run Jest UNIT Tests
         run: yarn test:unitCI
 
-      - name: Build
+      - name: Build App
         run: yarn build
 
-      - name: Install
-        uses: ianwalter/puppeteer@master
-        with:
-          args: yarn
+      - name: Serve App
+        run: yarn start
 
-      - name: Test
+      - name: Run Puppeteer E2E Tests
         uses: ianwalter/puppeteer@master
         with:
           args: yarn test
