--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "build": "react-scripts build",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
-    "test": "yarn test-ci:e2e",
+    "test": "yarn test-async:all",
     "test:e2e": "PORT=3000 NODE_ENV=debug cucumber-js features",
-    "test-ci:e2e": "PORT=3000 cucumber-js features --exit",
     "test:unit": "react-scripts test --watchAll --coverage",
+    "test-async:all": "yarn test-async:unit && yarn test-async:e2e",
+    "test-async:unit": "echo \"cd \"`pwd`\";yarn test:unit;exit;\" > \"`pwd`\"/UNIT_Test.command; chmod +x \"`pwd`\"/UNIT_Test.command; open \"`pwd`\"/UNIT_Test.command",
+    "test-async:e2e": "echo \"cd \"`pwd`\";yarn test:e2e;exit;\" > \"`pwd`\"/E2E_Test.command; chmod +x \"`pwd`\"/E2E_Test.command; open \"`pwd`\"/E2E_Test.command",
     "test-ci:unit": "react-scripts test --watchAll=false --forceExit --detectOpenHandles --ci",
+    "test-ci:e2e": "PORT=3000 cucumber-js features --exit",
     "eject": "react-scripts eject"
   },
   "browserslist": {
