e2e: headless puppeteer on remote

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,10 +61,11 @@ jobs:
       - name: Build App
         run: yarn build
 
-      - name: Change localhost to Network 
+      - name: Setup for Puppeteer
         run: |
           sed -i 's/localhost/10\.1\.0\.4/g' features/step_definitions/given.js
           sed -i 's/localhost/10\.1\.0\.4/g' features/step_definitions/when.js
+          sed -i 's/headless: false/headless: true/g' features/support/scope/BrowserScope.js
 
       - name: Host App locally
         run: |
@@ -75,10 +76,11 @@ jobs:
         with:
           args: yarn test-ci:e2e
 
-      - name: Revert Hostname Changes
+      - name: Revert Setup for Puppeteer
         run: |
-          sed -i '' 's/10\.1\.0\.4/localhost/g' features/step_definitions/given.js
-          sed -i '' 's/10\.1\.0\.4/localhost/g' features/step_definitions/when.js
+          sed -i 's/10\.1\.0\.4/localhost/g' features/step_definitions/given.js
+          sed -i 's/10\.1\.0\.4/localhost/g' features/step_definitions/when.js
+          sed -i 's/headless: true/headless: false/g' features/support/scope/BrowserScope.js
 
       - name: Commit and Push Changes
         uses: mikeal/publish-to-github-action@master
