--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,15 +61,14 @@ jobs:
       - name: Build App
         run: yarn build
 
+      - name: Host App locally
+        run: yarn start & (sleep 30 && exit)
+
       - name: Setup Files for Puppeteer
         run: |
           sed -i 's/localhost/10\.1\.0\.4/g' features/step_definitions/given.js
           sed -i 's/localhost/10\.1\.0\.4/g' features/step_definitions/when.js
           sed -i 's/headless: false/headless: true/g' features/support/scope/BrowserScope.js
-
-      - name: Host App locally
-        run: |
-          yarn start & (sleep 30 && exit)
 
       - name: Run Puppeteer E2E Tests
         uses: ianwalter/puppeteer@master
