--- a/.eslintignore
+++ b/.eslintignore
@@ -23,10 +23,11 @@ LICENSE
 ### Copy from .gitignore
 
 # testing
+/test/reports
 /test/screenshots/compare
 /test/screenshots/diff
 /test/screenshots/error
-/test/reports
+/test/*.command
 /coverage
 
 # dependencies
