--- a/.prettierignore
+++ b/.prettierignore
@@ -29,10 +29,11 @@ LICENSE
 ### Copy from .gitignore
 
 # testing
+/test/reports
 /test/screenshots/compare
 /test/screenshots/diff
 /test/screenshots/error
-/test/reports
+/test/*.command
 /coverage
 
 # dependencies
@@ -56,3 +57,4 @@ yarn.lock
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
