--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,19 @@
-# VS Code
-.vscode
+#####################################################
+### Copy from .gitignore
 
 # testing
+/test/reports
 /test/screenshots/compare
 /test/screenshots/diff
 /test/screenshots/error
-/test/reports
+/test/*.command
 /coverage
-/cmd/*.command
 
 # dependencies
 /node_modules
 yarn.lock
+/.pnp
+.pnp.js
 
 # production
 /build
@@ -22,6 +24,8 @@ yarn.lock
 .env.development.local
 .env.test.local
 .env.production.local
+
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
