--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,9 +68,7 @@ jobs:
           sed -i 's/headless: false/headless: true/g' features/support/scope/BrowserScope.js
 
       - name: Run Puppeteer E2E Tests
-        uses: ianwalter/puppeteer@master
-        with:
-          args: yarn test-ci:e2e
+        run: yarn test-ci:e2e
 
       - name: Setup Files for Commit
         run: |
