--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,18 +51,18 @@ jobs:
 
       - name: Setup Files for Puppeteer
         run: |
-          sed -i 's/localhost/10\.1\.0\.4/g' features/step_definitions/given.js
-          sed -i 's/localhost/10\.1\.0\.4/g' features/step_definitions/when.js
-          sed -i 's/headless: false/headless: true/g' features/support/scope/BrowserScope.js
+          sed -i '' 's/localhost/10\.1\.0\.4/g' features/step_definitions/given.js
+          sed -i '' 's/localhost/10\.1\.0\.4/g' features/step_definitions/when.js
+          sed -i '' 's/headless: false/headless: true/g' features/support/scope/BrowserScope.js
 
       - name: Run Puppeteer E2E Tests
         run: yarn test-ci:e2e
 
       - name: Setup Files for Commit
         run: |
-          sed -i 's/10\.1\.0\.4/localhost/g' features/step_definitions/given.js
-          sed -i 's/10\.1\.0\.4/localhost/g' features/step_definitions/when.js
-          sed -i 's/headless: true/headless: false/g' features/support/scope/BrowserScope.js
+          sed -i '' 's/10\.1\.0\.4/localhost/g' features/step_definitions/given.js
+          sed -i '' 's/10\.1\.0\.4/localhost/g' features/step_definitions/when.js
+          sed -i '' 's/headless: true/headless: false/g' features/support/scope/BrowserScope.js
 
       - name: Log Git Status
         run: git status
