--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           sed -i '' 's/headless: true/headless: false/g' features/support/scope/BrowserScope.js
 
       - name: Git commit and push to master
-        run: git add . && git commit -m "Add existing file" && git push origin master
+        run: git show-ref && (git add --all && (git commit -m "Add existing file" && git push -u origin HEAD:master))
 
       #- name: Commit and Push Changes
        # uses: mikeal/publish-to-github-action@master
