--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,9 +68,10 @@ jobs:
           git config --local user.name "GitHub Action"
           git show-ref
           git add --all
-          git commit --allow-empty -m "CI_Automation"
+          git commit --allow-empty -m "CI:{{github.event.commits[0].message}}"
           
       - name: Push changes to master
+        #if: env.DAY_OF_WEEK == 'Mon'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
