--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,13 @@ jobs:
       - name: Run Linter Prettier
         run: ./node_modules/.bin/prettier --write --config ./.prettierrc "**/*.*"  
 
+      - name: Commit changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "CI Lint Action"
+          git add --all
+          git diff-index --quiet HEAD || git commit -m "Lint:${github.event.commits[0].message}"
+
       - name: Run Jest UNIT Tests
         run: yarn test-ci:unit
 
@@ -65,22 +72,15 @@ jobs:
       - name: Commit changes
         run: |
           git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git show-ref
+          git config --local user.name "CI Test Action"
           git add --all
-          git diff-index --quiet HEAD || git commit --allow-empty -m "CI:{github.event.commits[0].message}"
+          git diff-index --quiet HEAD || git commit -m "CI:${github.event.commits[0].message}"
           
       - name: Push changes to master
-        #if: env.DAY_OF_WEEK == 'Mon'
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: git push "https://${github.actor}:${secrets.GITHUB_TOKEN}@github.com/${github.repository}.git" HEAD:master
           
       - name: Push changes to stable
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: stable
+        run: git push "https://${github.actor}:${secrets.GITHUB_TOKEN}@github.com/${github.repository}.git" HEAD:stable
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
