--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "CI Lint Action"
           git add --all
-          git diff-index --quiet HEAD || git commit -m "Lint:${github.event.commits[0].message}"
+          git diff-index --quiet HEAD || git commit -m "Lint:${{github.event.commits[0].message}}"
 
       - name: Run Jest UNIT Tests
         run: yarn test-ci:unit
@@ -74,13 +74,13 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "CI Test Action"
           git add --all
-          git diff-index --quiet HEAD || git commit -m "CI:${github.event.commits[0].message}"
+          git diff-index --quiet HEAD || git commit -m "CI:${{github.event.commits[0].message}}"
           
       - name: Push changes to master
-        run: git push "https://${github.actor}:${secrets.GITHUB_TOKEN}@github.com/${github.repository}.git" HEAD:master
+        run: git push "https://${github.actor}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git" HEAD:master
           
       - name: Push changes to stable
-        run: git push "https://${github.actor}:${secrets.GITHUB_TOKEN}@github.com/${github.repository}.git" HEAD:stable
+        run: git push "https://${github.actor}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git" HEAD:stable
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
