--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "test-async:e2e": "echo \"cd \"`pwd`\";yarn test:e2e;exit;\" > \"`pwd`\"/test/E2E_Test.command; chmod +x \"`pwd`\"/test/E2E_Test.command; open \"`pwd`\"/test/E2E_Test.command",
     "test-ci:unit": "react-scripts test --watchAll=false --coverage --forceExit --detectOpenHandles --ci",
     "test-ci:e2e": "PORT=3000 cucumber-js features --exit",
-    "prerelease": "standard-version --prerelease alpha",
-    "release": "standard-version",
+    "prerelease-ci": "standard-version --prerelease alpha",
+    "release": "git pull && standard-version",
     "eject": "react-scripts eject"
   },
   "browserslist": {
