--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           path: coverage
 
       - name: Add codecov report
-        run: codecov -t ${{secrets.CODECOV_TOKEN}}
+        run: ./node_modules/.bin/codecov -t ${{secrets.CODECOV_TOKEN}}
 
       - name: Build App
         run: yarn build
