--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,10 @@ jobs:
         run: yarn prerelease-ci
           
       - name: Push copy to stable
-        run: git push "https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git" HEAD:stable
+        run: |
+          git git pull origin stable
+          git show-refs
+          git push "https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git" HEAD:stable --follow-tags
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
